fix: add some metaname

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📊</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="winrate calculator,mobile legend,wr calculator mobile legend" />
+    <meta name="copyright" content="Eskey" />
+    <meta name="subject" content="Winrate Calculator for Mobile Legends" />
+    <meta name="og:title" content="Winrate Calculator for Mobile Legends!" />
+    <meta name="og:url" content="https://wr-calculator.vercel.app/" />
+    <meta name="description" content="help you to calculate your winrate " />
+    <meta name="og:site_name" content="Eskey" />
+    <meta name="og:description" content="Winrate Calculator for Mobile Legends" />
+    <meta name="theme-color" content="#FFFFFF" />
     <title>WinRate Calculator</title>
   </head>
   <body class="bg-slate-800">
